avoid fixed positions on small layouts

--- a/css/styles.css
+++ b/css/styles.css
@@ -36,10 +36,10 @@
 h1 {
   font-family: 'catFont';
   text-align: center;
-  position: fixed;
+  /* position: fixed;
   z-index: 650;
   top: 10px;
-  left: 15px;
+  left: 15px; */
   padding: 8px 15px;
   margin: 0;
   color: #000000cc;
@@ -86,12 +86,9 @@ h5 {
 }
 
 #map {
-  position:fixed;
   border: 3px solid black;
-  height: 80%;
-  width: 67%;
-  top: 0;
-  bottom: 0;
+  height: 500px;
+  width: 100%;
 }
 
 
@@ -102,9 +99,9 @@ h5 {
   height: 80%;
 }
 
-img {
+/* img {
   border: 2px solid black;
-}
+} */
 
 img_txt {
   font-family: 'Courier New', Courier, monospace;
@@ -164,7 +161,7 @@ img_txt {
   width: 100%;
   height: 100vh;
   background-color: black;
-  z-index: 200; 
+  z-index: 2000; 
   color: white;
   text-align: center;
   line-height: 90vh;
@@ -198,4 +195,17 @@ img_txt {
 .fade-in {
   opacity: 0;
   animation: fadeIn 1s ease-in forwards
+}
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) { 
+  #map {
+    position:fixed;
+    border: 3px solid black;
+    height: 100vh;
+    width: 67%;
+    top: 0;
+    bottom: 0;
+  }
+
 }
